--- a/assembly/p1/Makefile
+++ b/assembly/p1/Makefile
@@ -1,3 +1,7 @@
+arithmetic: arithmetic.asm
+	nasm -f elf64 arithmetic.asm
+	gcc arithmetic.o
+	./a.out
 a.o: a.asm
 	nasm  -f elf64 a.asm
 build: a.o 
